fix jwt